<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/text_account_login"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_UserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_login"
        android:hint="@string/text_username_mail_phone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_PassWord"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_login"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:text="@string/text_login"
        android:textColor="#fff"
        android:textSize="18sp" />
</LinearLayout>